created a contact form and added it to the 'Contact-Us' page

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,6 +1,6 @@
 
 .hero-container {
-    background: url('/public/images/home_main_1.jpg') 
+    background: url('/public/images/IMG_4996.jpg') 
     center center/ cover no-repeat;
     height: 100vh;
     width: 100%;
