--- a/src/components/GoogleSection.css
+++ b/src/components/GoogleSection.css
@@ -1,12 +1,18 @@
+body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: black; /* Set the background color to black */
+}
+
 .google {
     padding: 4rem;
-    background: black;
 }
 .google-container {
     display: flex;
     flex-flow: column;
     align-items: center;
-    width: 90%;
+    width: 100%;
     height: 100vh; /* Adjust the height as needed */
 }
 
@@ -24,6 +30,10 @@
 
 .review {
     justify-content: space-evenly;
+    border: 2px solid red;
+    padding: 20px;
+    border-radius: 3%;
+    margin-bottom: 20px;
 }
 
 @media screen and (max-width: 960px) {
@@ -49,8 +59,8 @@
         font-size:12px
     }
     .google-container {
-        margin-top: 100px;
-        margin-bottom: 100px;
+        margin-top: -10px;
+        margin-bottom: 300px;
     }
 }
 
@@ -62,8 +72,5 @@
     .review-text {
         font-size:12px
     }
-    .google-container {
-        margin-top: 120px;
-        margin-bottom: 120px;
-    }
+
 }
