--- a/src/components/ContactInfo.css
+++ b/src/components/ContactInfo.css
@@ -2,21 +2,71 @@
 
 .contact-info {
     color: red;
-    display:flex;
-    flex-direction:column;
-    justify-content:left;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
     padding-top: 3%;
     padding-left: 3%;
     padding-right: 3%;
     font-size: 26px;
-}
-
-@media screen and (max-width: 768px) {
-    .contact-info {
-        font-size: 20px;
-    }
-}
-
-.contact-address {
+    width:100%
+  }
+  
+  a.link {
+    color: green;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  .contact-address {
     color: red;
-}
+  }
+  
+  .contact-methods {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 20px; /* Add margin for spacing */
+    margin-right: 200px;
+  }
+  
+  .contact-methods p {
+    margin-bottom: 20px;
+    margin-left: 150px;
+  }
+  
+  .contact-methods label {
+    display: flex;
+    align-items: center;
+    width: max-content; /* Adjust the width based on the longest label */
+    margin-bottom: 5px;
+  }
+  
+  .contact-methods input {
+    margin-right: 10px;
+  }
+
+  .select-service p {
+    color: white;
+    
+  }
+
+  .contact-car-info p {
+    color: white;
+    margin-bottom: 10px;
+  }
+
+  .select-service select {
+    margin-bottom: 10px;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .contact-info {
+      font-size: 20px;
+    }
+    .container {
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+  }
