--- a/src/components/GoogleSection.css
+++ b/src/components/GoogleSection.css
@@ -9,11 +9,13 @@ body, html {
     padding: 4rem;
 }
 .google-container {
+    position: relative;
     display: flex;
     flex-flow: column;
     align-items: center;
     width: 100%;
     height: 100vh; /* Adjust the height as needed */
+    margin-bottom: 300px;
 }
 
 .review-text,
@@ -23,16 +25,17 @@ body, html {
     color: white;
     font-size: 20px;
 }
-.google h2 {
+.google h1, h2 {
     color: white;
     font-size: 35px;
+    text-align: center;
 }
 
 .review {
     justify-content: space-evenly;
-    border: 2px solid red;
+    background-color: #333;
     padding: 20px;
-    border-radius: 3%;
+    border-radius: 4%;
     margin-bottom: 20px;
     
 }
@@ -47,7 +50,7 @@ body, html {
     }
     .google-container {
         margin-top: 25px;
-        margin-bottom: 50px;
+        margin-bottom: 200px;
     }
 }
 
@@ -61,7 +64,7 @@ body, html {
     }
     .google-container {
         margin-top: -10px;
-        margin-bottom: 300px;
+        margin-bottom: 550px;
     }
 }
 
