--- a/src/components/AboutUsSection.css
+++ b/src/components/AboutUsSection.css
@@ -19,7 +19,7 @@
 
 .about-container h1 {
     font-size: 40px;
-    color: red;
+    color: #ec131b;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -52,6 +52,6 @@
     .about-conclusion {
         color:white;
         text-align:center;
-        font-size: 18px;
+        font-size: 24px;
     }
 }
