--- a/src/components/ServiceSection.css
+++ b/src/components/ServiceSection.css
@@ -9,7 +9,7 @@
   .services-container h2 {
     font-size: 40px;
     text-align: center;
-    color: red;
+    color: #ec131b;
   }
   
   .services-text ul {
@@ -28,6 +28,8 @@
   }
   
   .services-text p {
+    padding-bottom:20px;
+    padding-top: 20px;
     font-size: 24px;
     margin-top: 20px;
     max-width: 800px; /* Limit the width of the paragraph */
