--- a/src/components/ApplyForm.css
+++ b/src/components/ApplyForm.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh; /* Adjust the height as needed */
+    margin-top: -50px;
   }
   
   .--form-control--card {
@@ -39,7 +40,11 @@
   }
 
 .file-upload {
-    color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  padding-left: 50px;
 }
 
 .file-upload input{
