--- a/src/components/GoogleSection.css
+++ b/src/components/GoogleSection.css
@@ -14,8 +14,7 @@ body, html {
     flex-flow: column;
     align-items: center;
     width: 100%;
-    height: 100vh; /* Adjust the height as needed */
-    margin-bottom: 300px;
+    height: auto; /* Adjust the height as needed */
 }
 
 .review-text,
@@ -48,10 +47,7 @@ body, html {
     .review-text {
         font-size:16px
     }
-    .google-container {
-        margin-top: 25px;
-        margin-bottom: 200px;
-    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -62,10 +58,7 @@ body, html {
     .review-text {
         font-size:12px
     }
-    .google-container {
-        margin-top: -10px;
-        margin-bottom: 550px;
-    }
+
 }
 
 @media screen and (max-height: 600px) {
