--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-    height: 80px;
+    height: 130px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,6 +8,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    flex-direction: column;
   }
   
   .navbar-container {
@@ -79,6 +80,10 @@
     .NavbarItems {
       position: relative;
     }
+
+    .navbar {
+      flex-direction: row;
+    }
   
     .nav-menu {
       display: flex;
@@ -86,7 +91,7 @@
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+      top: 130px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
